[package]
name = "wgpu-segfault"
version = "0.1.0"
authors = ["Aaron Hill <aa1ronham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
gfx-backend-gl = { path = "/home/aaron/repos/gfx/src/backend/gl" }
gfx-hal = { path = "/home/aaron/repos/gfx/src/hal" }
log = "0.4.14"

