[package]
name = "wgpu-segfault"
version = "0.1.0"
authors = ["Aaron Hill <aa1ronham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx-backend-gl = { git = "https://github.com/gfx-rs/gfx/", rev = "07043744b4b05893363066ca0e50c5e38348f20c" }
gfx-hal = { git = "https://github.com/gfx-rs/gfx/", rev = "07043744b4b05893363066ca0e50c5e38348f20c" }
